--- a/chemquest_website/static/css/views/home.css
+++ b/chemquest_website/static/css/views/home.css
@@ -67,7 +67,7 @@ img#question-img {
 }
 .skip {
     content: "Skip";
-    background: url("../../images/skip-light.svg") left no-repeat;
+    background: var(--skip-button-style) left no-repeat;
     background-size: contain;
     width: 60px;
     height: 50px;
@@ -75,7 +75,7 @@ img#question-img {
 }
 .next {
     content: "Next";
-    background: url("../../images/next-light.svg") left no-repeat; 
+    background: var(--next-button-style) left no-repeat; 
     background-size: contain;
     width: 60px;
     height: 50px;
@@ -165,10 +165,16 @@ img#question-img {
 }
 /* MCQ form styling */
 .mcq-overlay {
-    background-color: rgba(255, 255, 255, 0.8);
+    background-color: rgba(0, 0, 0, 0.8);
     display: flex;
     justify-content: center;
     align-items: center;
+    backdrop-filter: blur(2px);
+    -webkit-backdrop-filter: blur(2px);
+    width: 100%;
+    height: 100%;
+    z-index: 50;
+    transition: opacity 2s linear, z-index 1s step-end, clip-path 10s ease-in-out;;
 }
 
 /* molecule styling */
